Change bg image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,12 @@
 	width: 300px;
 }
 
+
+.jumbotron {
+	height: 468px;
+	background: url(../images/guitar_lion.jpg) no-repeat center; 
+	  -webkit-background-size: cover; /* pour Chrome et Safari */
+	  -moz-background-size: cover; /* pour Firefox */
+	  -o-background-size: cover; /* pour Opera */
+	background-size: cover;
+}
