--- a/public/views/signin.html
+++ b/public/views/signin.html
@@ -4,12 +4,12 @@
         <fieldset style="width:300px">
           <div class="form-group">
             <div class="col-lg-10">
-              <input type="text" class="form-control" name="username" placeholder="Email">
+              <input type="text" class="form-control" ng-model="User.username" placeholder="Email">
             </div>
           </div>
           <div class="form-group">
             <div class="col-lg-10">
-              <input type="password" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control" ng-model="User.password" placeholder="Password">
             </div>
           </div>
           <div class="form-group">
