--- a/public/views/signin.html
+++ b/public/views/signin.html
@@ -19,4 +19,5 @@
           </div>
         </fieldset>
     </form>        
-</div>              
+    <div style="text-align: center; color: red;">{{tagline}}</div>
+</div>    
