--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,36 +6,55 @@ body{
 	width: 300px;
 }
 
-
 .jumbotron-accueil {
 	height: 468px;
-	background: url(../images/guitar_lion.jpg) no-repeat center; 
+	background: url(../images/home.jpg) no-repeat center; 
 	  -webkit-background-size: cover; /* pour Chrome et Safari */
 	  -moz-background-size: cover; /* pour Firefox */
 	  -o-background-size: cover; /* pour Opera */
 	background-size: cover;
 }
 
-.form-signin {
-	max-width: 330px;
-	padding: 35px;
-	margin: 50px auto 0 auto;
-}
-
-.form-contact {
+.form-sign {
 	max-width: 600px;
-	padding: 35px;
-	margin: 20px auto 0 auto;
+	padding: 5px;
+	margin: 0 auto 0 auto;
 }
 
-.form-signin-heading {
-	margin-bottom: 10px;
+.form-sign .form-control {
+  display: block;
+  width: 330px;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555555;
+  vertical-align: middle;
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+
+ }
+  
+.test {
+  width: 800px !important;
+  height: 150px !important;
+}
+
+.form-signin-heading,
+.form-signup-heading,
+.form-addannonce-heading{
+	margin-bottom: 30px;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 500;
 	color: #6E95E6;
 	line-height: 1.1;
 	font-size: 20px;
-	text-transform: capitalize;
 }
 
 @media (max-width: 768px) {
