--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,30 +1,36 @@
-<div class="container">
-    <form class="bs-example form-horizontal form-contact" action="/users/session" method="post" accept-charset="UTF-8">
+<div class="container" style="margin-top:60px">
+    <div class="row">
+      <div class="col-lg-2" style="margin-top:50px">
+          <img src="images/contact.png">
+      </div>
+      <div class="col-lg-10">
+    <form class="bs-example form-horizontal form-sign" action="/users/session" method="post" accept-charset="UTF-8">
         <h2 class="form-signin-heading">Contacter le site</h2> 
+        <fieldset style="width:300px">
+          <div class="row input-group" style="margin:10px"> 
+              <span class="input-group-addon" style="width:150px;">Nom</span> 
+              <input type="text" required class="form-control">
+          </div>
+          <div class="row input-group" style="margin:10px"> 
+              <span class="input-group-addon" style="width:150px;">Email</span> 
+              <input type="text" required class="form-control">
+          </div>
+          <div class="row input-group" style="margin:10px"> 
+              <span class="input-group-addon" style="width:150px;">Sujet</span> 
+              <input type="text" required class="form-control">
+          </div>
           <div class="row">
             <div class="col-lg-12" style="margin:10px">
-                <input type="text" class="form-control" name="username" placeholder="Nom">
+                <textarea class="form-control test" rows="15" id="form_comments" name="form[comments]" placeholder="Merci de saisir votre message" required="true"></textarea>
             </div>
-          </div><!-- /.row -->
+          </div><!-- /.row -->   
           <div class="row">
-            <div class="col-lg-12" style="margin:10px">
-                <input class="form-control" name="email" placeholder="Email">
-            </div>
-          </div><!-- /.row -->          
-          <div class="row">
-            <div class="col-lg-12" style="margin:10px">
-                <input type="text" class="form-control" name="sujet" placeholder="Sujet">
-            </div>
-          </div><!-- /.row -->       
-          <div class="row">
-            <div class="col-lg-12" style="margin:10px">
-                <textarea class="form-control" rows="7" id="form_comments" name="form[comments]" placeholder="Merci de saisir votre message" required="true"></textarea>
-            </div>
-          </div><!-- /.row -->    
-          <div class="row">
-            <div class="col-lg-12" style="margin:10px">
+            <div class="col-lg-12 col-lg-offset-5">
                 <button type="submit" class="btn btn-primary">Valider</button> 
             </div>
-          </div><!-- /.row -->                                               
+          </div><!-- /.row -->       
+        </fieldset>
     </form>        
-</div>              
+      </div>
+    </div>
+</div>            
