--- a/public/views/home.html
+++ b/public/views/home.html
@@ -12,7 +12,7 @@
                 <a class="btn btn-warning btn-sm" href="#" role="button">Demandes</a>
             </div>                
             <div class="col-md-2"  style=" display: inline-block;">
-                <a class="btn btn-success btn-sm" href="#" role="button">Déposer</a>
+                <a class="btn btn-success btn-sm" href="/add_annonce" role="button">Déposer</a>
             </div>                
         </div>      
         <div class="row" style="margin-top:10px; text-align:center;">     
