--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -21,7 +21,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12" style="margin:10px">
-                <textarea class="form-control test" rows="15" id="form_comments" name="form[comments]" placeholder="Merci de saisir votre message" required="true"></textarea>
+                <textarea class="form-control contenu_annonce" rows="15" id="form_comments" name="form[comments]" placeholder="Merci de saisir votre message" required="true"></textarea>
             </div>
           </div><!-- /.row -->   
           <div class="row">
