--- a/public/views/add_annonce.html
+++ b/public/views/add_annonce.html
@@ -5,6 +5,7 @@
       </div>
       <div class="col-lg-10">
           <form class="bs-example form-horizontal form-sign" method="post" accept-charset="UTF-8">
+            <div class="border-radius2">            
               <h2 class="form-addannonce-heading">Merci de déposer votre annonce</h2> 
               <fieldset style="width:300px">
                 <div class="row input-group" style="margin:10px"> 
@@ -50,6 +51,7 @@
                   </div>
                 </div><!-- /.row -->      
               </fieldset>
+            </div>
           </form>   
           <div style="text-align: center; color: red;">{{tagline}}</div>     
       </div>
