--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -5,6 +5,7 @@
       </div>
       <div class="col-lg-10">
     <form class="bs-example form-horizontal form-sign" action="/users/session" method="post" accept-charset="UTF-8">
+      <div class="border-radius1">
         <h2 class="form-signin-heading">Contacter le site</h2> 
         <fieldset style="width:300px">
           <div class="row input-group" style="margin:10px"> 
@@ -30,6 +31,7 @@
             </div>
           </div><!-- /.row -->       
         </fieldset>
+      </div>
     </form>        
       </div>
     </div>
