--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -5,6 +5,7 @@
       </div>
       <div class="col-lg-10">
     <form class="bs-example form-horizontal form-sign" method="post" accept-charset="UTF-8">
+      <div class="border-radius1">
         <h2 class="form-signup-heading">Merci de créer votre compte</h2> 
         <fieldset style="width:300px">
           <div class="row input-group" style="margin:10px"> 
@@ -25,7 +26,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12" style="margin:10px">
-              <button type="submit" class="btn btn-primary" ng-click="register()">Valider</button> 
+              <button type="submit" class="btn btn-primary" ng-click="register()">Valider</button 
             </div>
           </div>
           <br><br>
@@ -33,6 +34,7 @@
               <div style="text-align: center; color: red;">{{tagline}}</div>
           </div>               
         </fieldset>
+      </div>        
     </form> 
       </div>
     </div>
