--- a/public/views/signin.html
+++ b/public/views/signin.html
@@ -5,6 +5,7 @@
       </div>
       <div class="col-lg-10">
     <form class="bs-example form-horizontal form-sign" method="post" accept-charset="UTF-8">
+      <div class="border-radius2">
         <h2 class="form-signin-heading">Merci de vous authentifier</h2> 
         <fieldset style="width:300px">
           <div class="row input-group" style="margin:10px"> 
@@ -25,6 +26,7 @@
               <div style="text-align: center; color: red;">{{tagline}}</div>
           </div>          
         </fieldset>
+      <div>
     </form>        
 
       </div>
